Calendar View Dark Mode Support / Fix Checkbox

--- a/css/root.css
+++ b/css/root.css
@@ -107,3 +107,11 @@ header.area-wrap .area__left.tchInfo-Wrap .tchInfoBtn .tchInfo * {
 .calendar-wrap .fc .fc-daygrid-day.fc-day-today .fc-daygrid-day-number {
     border-radius: 500px !important;
 }
+
+.pi-check:before {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
